Fixed overflow messing up scrolling

--- a/static/styles.css
+++ b/static/styles.css
@@ -62,7 +62,7 @@
 /* Overthrow CSS:
    Enable overflow: auto on elements with overthrow class when html element has overthrow class too */
 .overthrow-enabled .overthrow {
-    overflow: auto;
+    overflow: hidden;
     -webkit-overflow-scrolling: touch;
 }
 
